--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ sha2 = "0.10.8"
 thiserror = "1.0.49"
 
 [dev-dependencies]
+hex = "0.4.3"
+hex-literal = "0.4.1"
 once_cell = "1.18.0"
 
 # We don't use these dependencies directly,
